syntax = "proto3";

package grant;

option go_package = "github.com/monax/hoard/v7/grant";

message Grant {
    // The grantSpec provides sufficient information to decrypt the reference
    // if hoard has access to the requisite secret
    Spec Spec = 1;
    bytes EncryptedReferences = 2;
    int32 Version = 3;
}

message Spec {
    PlaintextSpec Plaintext = 1;
    SymmetricSpec Symmetric = 2;
    OpenPGPSpec OpenPGP = 3;
}

message PlaintextSpec {

}

message SymmetricSpec {
    // A non-secret identifier for a secret that is 'known' to Hoard (accessible via store or config)
    string PublicID = 1;
}

message OpenPGPSpec {
    string PublicKey = 1;
}

